# adventofcode

./: .gitignore  Pipfile  day10.ipynb  day10.py  day13.ipynb  day14.ipynb  day15.ipynb  day3.Rmd  day5.ipynb  day7.go  pyproject.toml
.ipynb_checkpoints/: day10-checkpoint.ipynb  day13-checkpoint.ipynb  day7-checkpoint.ipynb
2016/01/: day1.py
2016/02/: day2.go
2016/03/: run.py
2016/04/: run.py
2016/day1/: day1.ipynb
2017/: day11.ipynb  day8.ipynb  day8_output.txt
2017/01/: day1.Rmd  day1.html  day1.ipynb  day1.nb.html  readme.md
2017/02/: day2.html  day3.ipynb  readme.md
2017/03/: day3.ipynb  readme.md
2017/04/: day4.go  day4.ipynb
2017/05/: day5.ipynb
2017/07/: day7.ipynb
2017/08/: day8.ipynb  day8_output.txt
2017/09/: day9.py  readme.md
2017/10/: day10.Rmd  day10.ipynb
2017/11/: day11.ipynb
2017/12/: day12.ipynb
2017/13/: day13.go  day13.ipynb
2017/14/: day14.ipynb
2017/15/: day15.ipynb
2017/16/: dance.py  day16.ipynb
2017/17/: day17.ipynb
2017/18/: day18.ipynb
2017/19/: day19-R.ipynb  day19.Rmd
2017/2/: day2.Rmd
2017/20/: day20.ipynb
2017/21/: day21-R.ipynb  day21.ipynb
2017/7/: day7.Rmd  day7.ipynb
2017/day4/: day4.Rmd  day4.ipynb  day4.py
2017/day9/: day9.Rmd
2018/01/: README.md  day1.py
2018/02/: day2.ipynb  day2.py  (+1 more)
2019/: .python-version  intcode.py  requirements.txt
2020/: handholdconsole.py
2022/: day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py
day16/: dance.py  readme.md
day4/: day4.Rmd  day4.md
day6/: day6.py  readme.md
day9/: day9.Rmd  day9.py
(+104 files in other folders)
