[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dijkstar = "^2.5.0"
pytest = "^6.1.2"
advent-of-code-data = "^0.8.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
